Created toolbar withing flexcontainer and scrollable container for elements.

--- a/index.html
+++ b/index.html
@@ -33,75 +33,143 @@
 
             <div class="flex-container-scroll">
 
+                <div class="flex-container-elements">
 
-                <div class="list-group">
-                    <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+                    <div class="list-group">
+                        <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
 
-                    </h2>
-                    <button onclick="createReminder()">Create Reminder</button><br/>
+                        <button onclick="createReminder()">Create Reminder</button>
+                        <br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
 
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
 
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+                    </div>
+
+
+                    <div class="list-group">
+                        <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                        <button onclick="createReminder()">Create Reminder</button>
+                        <br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
+
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+                    </div>
+
+
+                    <div class="list-group">
+                        <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                        <button onclick="createReminder()">Create Reminder</button>
+                        <br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
+
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+                    </div>
+
+                    <div class="list-group">
+                        <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                        <button onclick="createReminder()">Create Reminder</button>
+                        <br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
+
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
+
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+                    </div>
 
                 </div>
-
-
-
-                <div class="list-group">
-                    <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
-
-                    </h2>
-                    <button onclick="createReminder()">Create Reminder</button><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
-
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
-
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
-
-                </div>
-
 
 
             </div>
