--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         <br/>
 
                         <input type="checkbox" id="button-checkbox">
-                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker 100g Rohzucker 100g Rohzucker 100g Rohzucker</label>
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker 100g Rohzucker 100g
+                            Rohzucker 100g Rohzucker</label>
                         <button onclick="createReminder()">i</button>
                         <br/>
 
@@ -84,13 +85,19 @@
                         <button onclick="createReminder()">Create Reminder</button>
                         <br/>
 
+                        <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label>
 
-
-
-                        <h2>Popup</h2>
-
-                        <div class="popup" onclick="myFunction()">Click me to toggle the popup!
-                            <span class="popuptext" id="myPopup">A Simple Popup!</span>
+                        <div class="popup" onclick="myFunction()">
+                            <button onclick="createReminder()">i</button>
+                            <span class="popuptext" id="myPopup">
+                                 <button class="button-margin-bottom"
+                                         onclick="createReminder()">Add Notes</button><br/>
+                                 <button class="button-margin-bottom"
+                                         onclick="createReminder()">Priority</button><br/>
+                                <button
+                                        onclick="createReminder()">Clear</button><br/>
+                            </span>
                         </div>
 
                         <script>
@@ -100,12 +107,9 @@
                                 popup.classList.toggle("show");
                             }
                         </script>
+                        <br/>
 
 
-
-
-                        <input type="checkbox" id="button-checkbox">
-                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
 
                         <input type="checkbox" id="button-checkbox">
                         <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
