--- a/index.html
+++ b/index.html
@@ -47,10 +47,37 @@
                         <button class="button-margin-bottom" onclick="createReminder()">Create Reminder</button>
                         <br/>
 
+
                         <input type="checkbox" id="button-checkbox">
-                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker 100g Rohzucker 100g
-                            Rohzucker 100g Rohzucker</label>
-                        <button onclick="createReminder()">i</button>
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label>
+
+                        <div class="popup" onclick="myFunction()">
+                            <button onclick="createReminder()">i</button>
+                            <span class="popuptext" id="myPopup">
+                                 <button class="button-margin-bottom"
+                                         onclick="createReminder()">Add Notes</button><br/><br/>
+
+
+                                <input type="checkbox" id="button-checkbox">
+                        <label for="button-checkbox" class="text-label">Important</label><br/><br/>
+
+
+
+                                <label class="text-label">Due Date:</label><br/>
+
+                                <input class="button-margin-bottom" type="date" value="2024-01-14"/><br/><br/>
+                                <button class="color-caution"
+                                        onclick="createReminder()">Clear Reminder</button><br/>
+                            </span>
+                        </div>
+
+                        <script>
+                            // When the user clicks on div, open the popup
+                            function myFunction() {
+                                var popup = document.getElementById("myPopup");
+                                popup.classList.toggle("show");
+                            }
+                        </script>
                         <br/>
 
 
@@ -95,7 +122,7 @@
                                  <button class="button-margin-bottom"
                                          onclick="createReminder()">High Priority</button><br/>
 
-                                <input class="button-margin-bottom" type="date" value="2024-01-14" /><br/>
+                                <input class="button-margin-bottom" type="date" value="2024-01-14"/><br/>
 
                                 <button class="color-caution"
                                         onclick="createReminder()">Clear Reminder</button><br/>
@@ -110,7 +137,6 @@
                             }
                         </script>
                         <br/>
-
 
 
                         <input type="checkbox" id="button-checkbox">
